--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>myFlix</title>
 </head>
+
 <body>
-    <div class="app-containter"></div>
+    <div class="app-container"></div>
     <script type="module" src="index.jsx"></script>
 </body>
+
 </html>
